# lz4_gpu

./: Cargo.toml  README.md  README_RUST.md
scripts/: benchmark_comparison.sh  compare_performance.sh  comprehensive_benchmark.sh  comprehensive_perf_test.sh  compress_test_files.sh  cpu_vs_gpu_benchmark.sh  generate_test_files.py  performance_comparison.sh  quick_benchmark.sh  quick_perf_test.sh  simple_benchmark.sh  test_profiling.sh
src/: async_pipeline.rs  benchmark.rs  direct_io.rs  gpu.rs  gpu_cache.rs  hybrid.rs  lib.rs  lz4.rs  lz4_parser.rs  main.rs  memory_pool.rs  persistent_gpu.rs  profiling.rs  quantized.rs  resource_management.rs  simple_profiler.rs  streaming_pipeline.rs
test_data/: README.md  test_file.txt  test_file.txt.lz4  webster.txt
test_data/lz4_compressed/: mozilla.dat.lz4  nci.txt.lz4  ooffice.dll.lz4  osdb.bin.lz4  reymont.txt.lz4  sao.bin.lz4  webster.txt.lz4  xml.xml.lz4
