[package]
name = "files-can-fly-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "files-can-fly-rust"
path = "src/main.rs"

[dependencies]
wgpu = "0.19"
pollster = "0.3"
rayon = "1.8"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
futures-intrusive = "0.5"
num_cpus = "1.0"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
